--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -192,7 +192,7 @@
     </div>
     <div>
       <p>ENVIOS</p>
-      <h5></h5>Los envios se realizan a traves de Andreani</h5>
+      <h5>Los envios se realizan a traves de Andreani</h5>
     </div>
     <div >
       <p>MEDIOS DE PAGO</p>
