--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -71,7 +71,7 @@
           <div>
             <p>ENVIOS</p>
             
-            <h5></h5>Los envios se realizan a traves de Andreani</h5>
+            <h5>Los envios se realizan a traves de Andreani</h5>
           </div>
           <div >
             <p>MEDIOS DE PAGO</p>
