--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -39,7 +39,7 @@
         </div>
         <div class="hero__main">
             <div>
-            <img src="../imagenes/hombre entrenando.jpg" alt="" width="450">
+            <img src="../imagenes/hombre entrenando.jpg" alt="" >
             </div>
             <div class="mercaderia">
             <div>
