--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -38,7 +38,7 @@
         </div>
         <div class="hero__main">
             <div>
-            <img src="../imagenes/mujer lenatando pesas.webp" alt="" width="500">
+            <img src="../imagenes/mujer lenatando pesas.webp" alt="" >
             </div>
             <div class="mercaderia">
             <div>
