--- a/pages/ninios.html
+++ b/pages/ninios.html
@@ -39,7 +39,7 @@
         </div>
         <div class="hero__main">
             <div>
-            <img src="../imagenes/niños jugando.jpg" alt="" width="650">
+            <img src="../imagenes/niños jugando.jpg" alt="" >
             </div>
             <div class="mercaderia">
             <div>
